# VActExplore

./: .gitignore  LICENSE  README.md  VActExplore.slnx
Include/: VActEditorComment.h  VActEditorDefaults.h  VActEditorGroup.h  VActEditorInstance.h  VActEditorSettings.h
VActASTEditor/: VActASTEditor.cpp  VActASTEditor.vcxproj  VActASTEditor.vcxproj.filters
VActASTEditor/Sample/: HelloWorld.cpp
VActASTEditorDLL/: CMakeLists.txt  README.md  VActEditorAction.cpp  VActEditorAction.h  VActEditorComment.cpp  VActEditorConsumer.cpp  VActEditorConsumer.h  VActEditorCursor.cpp  VActEditorDefaults.cpp  VActEditorGroup.cpp  VActEditorInstance.cpp  VActEditorLink.cpp  VActEditorNode.cpp  VActEditorSettings.cpp  VActEditorUI.cpp  VActEditorVisitor.cpp  VActEditorVisitor.h
VActASTEditorDLL-Build/: ALL_BUILD.vcxproj  CMakeCache.txt  VActASTEditorDLL.slnx  VActASTEditorDLL.vcxproj  VActASTEditorDLL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  acc_gen.vcxproj  clang-tablegen-targets.vcxproj  cmake_install.cmake  intrinsics_gen.vcxproj  omp_gen.vcxproj  target_parser_gen.vcxproj  target_parser_gen.vcxproj.filters  vt_gen.vcxproj
VActASTEditorDLL-Build/VActASTEditorDLL.dir/MinSizeRel/: objects.txt
VActASTEditorDLL-Build/VActASTEditorDLL.dir/RelWithDebInfo/: objects.txt
VActASTEditorDLL/Include/: VActEditorComment.h  VActEditorCursor.h  VActEditorDefaults.h  VActEditorGroup.h  VActEditorInstance.h  VActEditorLink.h  VActEditorNode.h  VActEditorUI.h  _VActASTEditor.h
